# nodejs-nur

./: .eslintrc.js  .gitignore  CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
src/: NUR.ts  index.ts
src/addon/NUR/: index.cpp
src/addon/NUR/nur-main/: nur-main.cpp  nur-wrapper-util.cpp
src/addon/NUR/nur-node/: nur-node-util.cpp  nur-node.cpp
src/addon/examples/: NurApiExample.cpp  NurApiExample.h  SensorExample.cpp  SensorExample.h  SetupExample.cpp  SetupExample.h  napi_event.cpp
src/addon/include/: nur-main.h  nur-node-util.h  nur-node.h
src/types/: nur.ts
util/: constants.ts  download.ts  initLib.ts  printer.ts
util/types/: general.ts
